# kazooformation

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  README.md  README_8md.html  annotated.html  annotated_dup.js  assert_8cpp.html  assert_8cpp.js  assert_8cpp__incl.map  assert_8cpp__incl.md5  assert_8hpp.html  assert_8hpp.js  assert_8hpp__dep__incl.map  assert_8hpp__dep__incl.md5  assert_8hpp__incl.map  assert_8hpp__incl.md5  assert_8hpp_source.html  audio__channel_8hpp.html  audio__channel_8hpp.js  audio__channel_8hpp__dep__incl.map  audio__channel_8hpp__dep__incl.md5  audio__channel_8hpp__incl.map  audio__channel_8hpp__incl.md5  audio__channel_8hpp_source.html  audio__constants_8hpp.html  audio__constants_8hpp.js  audio__constants_8hpp__dep__incl.map  audio__constants_8hpp__dep__incl.md5  audio__constants_8hpp__incl.map  audio__constants_8hpp__incl.md5  audio__constants_8hpp_source.html  binary__model_8hpp.html  binary__model_8hpp.js  binary__model_8hpp__dep__incl.map  binary__model_8hpp__dep__incl.md5  binary__model_8hpp__incl.map  binary__model_8hpp__incl.md5  binary__model_8hpp_source.html  (+1252 more)
.github/workflows/: static_doxygen_site.yaml
doc/: .~lock.kazooA_sample.cpp_fft_results.ods#  kazooA_sample.cpp_fft_results.ods  ktl.md  modulator.py  sources.md  theory.md  translation_layer.puml
doc/deprecated/: open_questions.md
doc/doxygen/: Doxyfile  layout.xml
doc/k2_model/: dsp.py  fft_plotter.py  main.py  readme.md  wav_trimmer.py
doc/k3_model/: fft_plotter.py  main.py  readme.md  wav_trimmer.py
doc/theory/: fft_ploter.py  main.py  theory.ipynb  theory.py  wav_trimmer.py
doc/uml/: ktl_audio_to_data.puml  ktl_data_to_audio.puml  ktl_structure.puml
project/: macros.sty
project/defense/: defense.tex  ktl_flow.puml  org_diagram.puml  sources.bib
project/final_presentation/: outline.md  presentation.tex
project/final_presentation/images/: kazoo_signals.drawio
project/intro_presentation/: presentation.tex
project/intro_presentation/images/: kazoo_signals.drawio
project/presentation/: script.md
project/proposal/: org_diagram.puml
project/showcase/: info.md  kazooformation.drawio
proposal/: org_diagram.puml  proposal.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  (+67 more)
src/: assert.hpp  binary_stream.hpp  main.cpp  symbol_processor.hpp
src/common/: assert.cpp  assert.hpp  logger.hpp
src/http_server/: index.html  main.cpp  tcp_socket.hpp
src/kazoo_connect_server/: main.cpp  tcp_socket.hpp
src/kazoo_connect_server/web_client/src/: App.css  App.js
src/kazoo_translation_layer/: binary_stream.cpp  binary_stream.hpp  symbol_processor.hpp  symbol_stream.hpp  symbol_table.hpp  transcoder.hpp
src/ktl/: assert.cpp  assert.hpp  audio_channel.hpp  binary_stream.cpp  binary_stream.hpp  deframer.hpp  encoder.hpp  encoder_context.hpp  i_symbol_stream.hpp  ktl_frame.hpp  symbol.hpp  symbol_model.hpp  symbol_stream.hpp  symbol_table.hpp  transcoder.hpp  translation_layer.cpp  translation_layer.hpp
src/ktl/audio/: audio_channel.hpp  audio_constants.hpp  fft.cpp  fft.hpp  kazoo_pcm.hpp  pulse_audio.hpp  wav_file.hpp  wave_tools.hpp
src/ktl/audio/kazoo_pcm/: doot1_pcm.cpp  doot2_pcm.cpp  doot3_pcm.cpp  doot4_pcm.cpp
src/ktl/model/: binary_model.hpp  testing_model.hpp
src/ktl/models/: binary_model.hpp  k1_model.cpp  k1_model.hpp  symbol_model.hpp  testing_model.hpp
src/ktl/models/k1_data/: KazooDoHigh_0.1s.pcm  KazooDo_0.1s.pcm
src/ktl/models/k2/: k2_model.cpp  k2_model.hpp  k2_pcm.hpp  kazoo_A_pcm.cpp  kazoo_D_pcm.cpp  kazoo_E_pcm.cpp  kazoo_G_pcm.cpp
src/ktl/models/k3/: k3_doot_high.cpp  k3_doot_low.cpp  k3_model.hpp
src/model_builder/: pcm_wav_output.py
src/web_client/: package-lock.json  package.json
src/web_client/public/: index.html
src/web_client/src/: App.js
tests/: binary_stream_test.cpp  symbol_processor_test.cpp  test_symbol_table.hpp  testing.hpp
tests/kazoo_translation_layer/: binary_stream_test.cpp  symbol_processor_test.cpp  transcoder_test.cpp
tests/ktl/: binary_model.test.cpp  binary_stream.test.cpp  binary_stream_test.cpp  decoder.test.cpp  deframer.test.cpp  encoder.test.cpp  symbol_processor_test.cpp  symbol_stream.test.cpp  test_symbol_model.hpp  test_symbol_table.hpp  transcoder.test.cpp  transcoder_test.cpp  translation_layer.test.cpp
tests/ktl/audio/: fft.test.cpp  pulse_audio.test.cpp  wav_file.test.cpp
tests/ktl/model/: binary_model.test.cpp  k1_model.test.cpp  k2_peak_model.test.cpp  k3_model.test.cpp  testing_model.test.cpp
tests/ktl_model_scoring/: main.cpp  model_tester.cpp  model_tester.hpp
